recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:8: error: identifier expected but ')' found.
  avance(100.);
             ^FourSquare:10: error: identifier expected but ')' found.
  avance(100.);
             ^FourSquare:12: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:14: error: identifier expected but ')' found.
  avance(100.)
             ^